"Messages" = "Messages";

// MARK: MessagesTabView
"archived" = "(Archived)";
"codeOfConduct" = "Code of Conduct";
"acceptCodeOfConductButtonLabel" = "Accept";

// MARK: SendMessageView
"exercise" = "Exercise";
"lecture" = "Lecture";
"messageAction" = "Message %@";

...
